--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "rss-parser": "^3.13.0",
+    "styled-components": "^6.3.8",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
