--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.27.2",
     "gsap": "^3.14.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.562.0",
     "motion": "^12.27.3",
     "next": "16.1.4",
