--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,8 @@
   },
   "include": [
     "next-env.d.ts",
+    "**/*.js",
+    "**/*.jsx",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
