--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-toolbar": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-three/fiber": "^9.5.0",
     "@studio-freight/lenis": "^1.0.42",
     "@udecode/cn": "^52.0.11",
     "@uploadthing/react": "^7.3.3",
@@ -70,7 +71,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dedent": "^1.0.0",
-    "framer-motion": "^12.27.2",
+    "framer-motion": "^12.28.1",
     "gsap": "^3.14.2",
     "html2canvas-pro": "^1.6.6",
     "imagekit": "^6.0.0",
@@ -79,7 +80,7 @@
     "lowlight": "^3.3.0",
     "lucide-react": "^0.562.0",
     "motion": "^12.27.3",
-    "next": "16.1.4",
+    "next": "^16.1.4",
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
     "platejs": "^52.0.17",
@@ -101,6 +102,7 @@
     "styled-components": "^6.3.8",
     "tailwind-merge": "^3.4.0",
     "tailwind-scrollbar-hide": "^4.0.0",
+    "three": "^0.182.0",
     "uploadthing": "^7.7.4",
     "use-file-picker": "^2.1.2",
     "zod": "^4.3.5",
