--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
@@ -69,6 +70,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "color-bits": "^1.1.1",
     "date-fns": "^4.1.0",
     "dedent": "^1.0.0",
     "framer-motion": "^12.28.1",
@@ -79,7 +81,7 @@
     "lottie-react": "^2.4.1",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.562.0",
-    "motion": "^12.27.3",
+    "motion": "^12.28.1",
     "next": "^16.1.4",
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
@@ -102,7 +104,7 @@
     "styled-components": "^6.3.8",
     "tailwind-merge": "^3.4.0",
     "tailwind-scrollbar-hide": "^4.0.0",
-    "three": "^0.182.0",
+    "three": "^0.167.1",
     "uploadthing": "^7.7.4",
     "use-file-picker": "^2.1.2",
     "zod": "^4.3.5",
