--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "next-themes": "^0.4.6",
     "pdf-lib": "^1.17.1",
     "platejs": "^52.0.17",
+    "postprocessing": "^6.38.2",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dnd": "^16.0.1",
